--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@basementuniverse/async": "^1.0.0",
     "@basementuniverse/utils": "^1.4.0",
+    "detect-collisions": "^9.8.0",
     "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   },
